# test_mosru

./: .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/api/: news.py
app/api/routers/: news.py
app/crud/: base.py  news.py
app/migration/: env.py
app/migration/versions/: ba89ece899d0_initial_migration.py
app/models/: news.py
app/parser/: mosday.py
app/schemas/: news.py
app/settings/: config.py
docker_compose/: app.yaml  storage.yaml
