[tool.poetry]
name = "test-task-mosru"
version = "0.1.0"
description = ""
authors = ["Rulezzz <test@test.test>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.10"
apscheduler = "^3.10.4"
lxml = "^5.3.0"
fake-useragent = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

